--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,19 @@ android {
     namespace 'com.rootminusone8004.bazarnote'
     compileSdk 34
 
+    dependenciesInfo {
+        // Disables dependency metadata when building APKs.
+        includeInApk = false
+        // Disables dependency metadata when building Android App Bundles.
+        includeInBundle = false
+    }
+
     defaultConfig {
         applicationId "com.rootminusone8004.bazarnote"
         minSdk 24
         targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "0.4.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
