--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.rootminusone8004.bazarnote">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
@@ -19,33 +20,39 @@
         android:theme="@style/Theme.Bazarnote"
         tools:targetApi="31">
         <activity
-            android:name=".AddSessionActivity"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".SessionActivity"
-            android:exported="false"
-            android:launchMode="singleTop" />
-        <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".SessionActivity"
-            android:exported="false"
-            android:launchMode="singleTop" />
-        <activity
-            android:name=".AddEditNoteActivity"
-            android:screenOrientation="portrait"
-            android:exported="false"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".SessionActivity"
-            android:screenOrientation="portrait"
+            android:name=".SplashActivity"
+            android:theme="@style/SplashTheme"
             android:exported="true"
-            android:launchMode="singleTop">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AddSessionActivity"
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:parentActivityName=".SessionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:parentActivityName=".SessionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AddEditNoteActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SessionActivity"
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:parentActivityName=".SplashActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
